# kompilattheur

./: .gitignore  2ndReport.md  2ndReport.typ  Cargo.toml  Prompt_smolpp.txt  README.md  TODO_Romain.md  analysis_table.md  analysis_table.txt  flake.nix  grammaire.txt  grammaire_ex.txt  llvm-mac.md  llvm-mac.sh  p.html  p.lex  p2.ll  readme.md  setup-hooks.sh  shell.nix  temp.txt
.hooks/: pre-commit
exemples_tp/: erreurs_dynamiques.smolpp  erreurs_statiques.smolpp
part1_programs/: exemples.smolpp  fibonacci.smolpp  fibonacci_iter.smolpp  fibonacci_rec.smolpp  lexical_errors.smolpp  syntax_errors.smolpp  test.smolpp
resources/test/: test_grammar.txt
src/: cli.rs  main.rs
src/analysis_table/: analysis_table.rs  analysis_table_generator.rs  (+3 more)
test_programs/: ASM_comp.smolpp  ASM_cond.smolpp  ASM_get_type.smolpp  ASM_range_comp.smolpp  ASM_strings_format.smolpp  ERROR_incompatible_types.smolpp  _test.smolpp  _test2.smolpp  aled.smolpp  align_4.smolpp  arithmetic.smolpp  ast_test.smolpp  bloom.smolpp  bloom_filter.smolpp  evil_string.smolpp  exemples.smolpp  fibonacci.smolpp  for_loop.smolpp  generic_arithmetic.smolpp  hello_world.smolpp  invalid_token.smolpp  invalid_tokens.smolpp  jeu_de_la_vie.smolpp  list.smolpp  llvm-test.c  llvm-test.ll  merge_sort.smolpp  minimal_grammar.smolpp  overflow_int.smolpp  print.smolpp  statement_before_def.smolpp  test_ast.smolpp  test_comparison.smolpp  test_concat.smolpp  test_expressions.smolpp  test_f_multitype.smolpp  test_for_iter_not_a_list.smolpp  test_for_range.smolpp  test_functions.smolpp  test_generic_arithmetic.smolpp  (+5 more)
(+166 files in other folders)
