[package]
name = "kompilattheur"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.33", features = ["derive"] }
indoc = "2"
clap_complete = "4.5.35"
colored = "3.0.0"
once_cell = "1.10.0"
webbrowser = "1.0.4"
inkwell = { version = "0.5.0", features = ["llvm18-0"] }
libc = "0.2"